@@ -1084,7 +1084,7 @@ NewAccountPooka.optionPanel.mbox.scopeRoot=NewAccountPooka
 
 FolderSelectorPane.inputButton.image=/net/suberic/util/gui/images/More.gif
 
-Search.searchTerms=Subject:Body:Flagged:From:To:CC:ToOrCC:Received:Sent:Seen:Answered:Deleted:Draft:Recent:Header:Cached
+Search.searchTerms=Subject:Body:Flagged:From:To:CC:ToOrCC:Received:Sent:Seen:Answered:Deleted:Draft:Recent:Header:Cached:Available
 Search.searchTerms.Answered.class=javax.mail.search.FlagTerm
 Search.searchTerms.Answered.flag=answered
 Search.searchTerms.Answered.type=Boolean
@@ -1122,6 +1122,8 @@ Search.searchTerms.Sent.class=javax.mail.search.SentDateTerm
 Search.searchTerms.Sent.type=Date
 Search.searchTerms.Cached.class=net.suberic.pooka.filter.CachedSearchTerm
 Search.searchTerms.Cached.type=Boolean
+Search.searchTerms.Available.class=net.suberic.pooka.filter.AvailableSearchTerm
+Search.searchTerms.Available.type=Boolean
 Search.searchTerms.Header.class=javax.mail.search.HeaderTerm
 Search.searchTerms.Header.type=Header
 
@@ -1165,7 +1167,7 @@ FolderInfo.defaultDisplayFilters.Unread.searchTerm.operation=Search.operations.F
 FolderInfo.defaultDisplayFilters.Unread.action.class=net.suberic.pooka.gui.filter.FontDisplayFilter
 FolderInfo.defaultDisplayFilters.Unread.action.style=bold
 
-FolderInfo.defaultDisplayFilters.Uncached.searchTerm.searchTerm=Search.searchTerms.Cached
+FolderInfo.defaultDisplayFilters.Uncached.searchTerm.searchTerm=Search.searchTerms.Available
 FolderInfo.defaultDisplayFilters.Uncached.searchTerm.operation=Search.operations.False
 FolderInfo.defaultDisplayFilters.Uncached.action.class=net.suberic.pooka.gui.filter.ColorDisplayFilter
 FolderInfo.defaultDisplayFilters.Uncached.action.rgb=-8648439
