@@ -1,5 +1,5 @@
 read message window
-  export;  attachment
+  export;  attachment 
   import:  nothing
 
 new message window
